# copilot-for-terminal-pro

./: .gitignore  README.md  copilots.json  main.py
.github/workflows/: lint.yml  test.yml
anthropic-copilot/: README.md  copilots.json  main.py  pyproject.toml
common/: README.md  pyproject.toml
common/common/: __init__.py  models.py  testing.py
example-copilot/: README.md  copilots.json  main.py  models.py  pyproject.toml  test.py
example-copilot/example_copilot/: main.py  models.py  prompts.py
example-copilot/tests/: _old.py  test_copilot.py
findb-copilot/: Dockerfile  README.md  pyproject.toml  start.sh
findb-copilot/findb_copilot/: copilots.json  main.py  models.py  prompts.py  services.py
liquid-copilot/: README.md  pyproject.toml
liquid-copilot/liquid_copilot/: copilots.json  main.py  prompts.py
liquid-copilot/tests/: test_copilot.py
llama31-local-copilot/: README.md  pyproject.toml
llama31-local-copilot/llama_copilot/: copilots.json  main.py  prompts.py
llama31-local-copilot/tests/: test_copilot.py
mistral-copilot/: README.md  copilots.json  main.py  models.py  prompts.py  pyproject.toml  test.py
mistral-copilot/.ipynb_checkpoints/: test-checkpoint.ipynb
mistral-copilot/mistral_copilot/: copilots.json  main.py  models.py  prompts.py
mistral-copilot/tests/: test_copilot  test_copilot.py
openbb-agent-copilot/: README.md  pyproject.toml
openbb-agent-copilot/openbb_agent_copilot/: copilots.json  main.py  models.py
perplexity-copilot/: README.md  pyproject.toml
perplexity-copilot/perplexity_copilot/: copilots.json  main.py  models.py  prompts.py
perplexity-copilot/tests/: test_copilot.py
test_payloads/: message_with_context.json  multiple_messages.json  retrieve_widget_from_dashboard.json  retrieve_widget_from_dashboard_with_result.json  single_message.json
