[tool.poetry]
name = "common"
version = "0.1.0"
description = "Common models and utilities for custom copilot examples"
authors = ["Michael Struwig <michael.struwig@openbb.finance>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
