[tool.poetry]
name = "copilot-for-terminal-pro"
version = "0.1.0"
description = ""
authors = ["Michael Struwig <michael.struwig@openbb.finance>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.27.0.post1"
python-dotenv = "^1.0.1"
httpx = "^0.26.0"
litellm = "^1.34.39"
idna = "^3.7"
magentic = {extras = ["litellm"], version = "^0.32.0"}
litellm = "^1.48.19"
openai = "^1.37.0"
sse-starlette = "^2.1.2"
aiohttp = "^3.10.9"


[tool.poetry.group.development.dependencies]
ruff = "^0.1.15"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
